Tests and benchmark works. BFS a lot faster.